[package]
name = "battlelog-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6.1", features = ["macros", "rt-multi-thread"] }
serde_json = { version = "1.0.64" }
anyhow = "1.0.41"

[dependencies.reqwest]
version = "0.11.3"
default-features = false
features = ["rustls-tls", "json"]